[tool.poetry]
name = "deepmost"
version = "0.1.0"
description = ""
authors = ["AswanthManoj <aswanthmanoj51@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.2"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
markdown2 = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
